update day8 still not done, but close to solution

--- a/exercises/day8/solution.ipynb
+++ b/exercises/day8/solution.ipynb
@@ -53,39 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 327,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_data = pd.DataFrame.from_dict(data)\n",
-    "# df1 = pd.DataFrame(index = round(df_data[\"mz_values\"]).unique())\n",
-    "# df_cleaned = pd.DataFrame()\n",
-    "df_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 316,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gr = df_data.groupby(\"iter\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -118,35 +86,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>136.0196</td>\n",
+       "      <td>136</td>\n",
        "      <td>924.3</td>\n",
        "      <td>AAAFEDQENETVVVK</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>136.0758</td>\n",
+       "      <td>136</td>\n",
        "      <td>2851.7</td>\n",
        "      <td>AAAFEDQENETVVVK</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>141.1025</td>\n",
+       "      <td>141</td>\n",
        "      <td>1404.0</td>\n",
        "      <td>AAAFEDQENETVVVK</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>143.0816</td>\n",
+       "      <td>143</td>\n",
        "      <td>26365.8</td>\n",
        "      <td>AAAFEDQENETVVVK</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>144.8338</td>\n",
+       "      <td>145</td>\n",
        "      <td>1128.4</td>\n",
        "      <td>AAAFEDQENETVVVK</td>\n",
        "      <td>1</td>\n",
@@ -159,69 +127,91 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>161</th>\n",
-       "      <td>1291.6150</td>\n",
-       "      <td>7756.5</td>\n",
-       "      <td>AAAFEDQENETVVVK</td>\n",
-       "      <td>1</td>\n",
+       "      <th>527962</th>\n",
+       "      <td>1086</td>\n",
+       "      <td>4482.4</td>\n",
+       "      <td>YYWGGLYSWDMSK</td>\n",
+       "      <td>2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>162</th>\n",
-       "      <td>1293.5999</td>\n",
-       "      <td>3007.4</td>\n",
-       "      <td>AAAFEDQENETVVVK</td>\n",
-       "      <td>1</td>\n",
+       "      <th>527963</th>\n",
+       "      <td>1144</td>\n",
+       "      <td>13329.1</td>\n",
+       "      <td>YYWGGLYSWDMSK</td>\n",
+       "      <td>2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>1309.6501</td>\n",
-       "      <td>2700.8</td>\n",
-       "      <td>AAAFEDQENETVVVK</td>\n",
-       "      <td>1</td>\n",
+       "      <th>527964</th>\n",
+       "      <td>1144</td>\n",
+       "      <td>5840.6</td>\n",
+       "      <td>YYWGGLYSWDMSK</td>\n",
+       "      <td>2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>1335.6620</td>\n",
-       "      <td>7148.2</td>\n",
-       "      <td>AAAFEDQENETVVVK</td>\n",
-       "      <td>1</td>\n",
+       "      <th>527965</th>\n",
+       "      <td>1330</td>\n",
+       "      <td>5966.4</td>\n",
+       "      <td>YYWGGLYSWDMSK</td>\n",
+       "      <td>2133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>1398.6517</td>\n",
-       "      <td>2797.6</td>\n",
-       "      <td>AAAFEDQENETVVVK</td>\n",
-       "      <td>1</td>\n",
+       "      <th>527966</th>\n",
+       "      <td>1331</td>\n",
+       "      <td>1867.1</td>\n",
+       "      <td>YYWGGLYSWDMSK</td>\n",
+       "      <td>2133</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>166 rows × 4 columns</p>\n",
+       "<p>527967 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     mz_values  intensity_values             Name  iter\n",
-       "0     136.0196             924.3  AAAFEDQENETVVVK     1\n",
-       "1     136.0758            2851.7  AAAFEDQENETVVVK     1\n",
-       "2     141.1025            1404.0  AAAFEDQENETVVVK     1\n",
-       "3     143.0816           26365.8  AAAFEDQENETVVVK     1\n",
-       "4     144.8338            1128.4  AAAFEDQENETVVVK     1\n",
-       "..         ...               ...              ...   ...\n",
-       "161  1291.6150            7756.5  AAAFEDQENETVVVK     1\n",
-       "162  1293.5999            3007.4  AAAFEDQENETVVVK     1\n",
-       "163  1309.6501            2700.8  AAAFEDQENETVVVK     1\n",
-       "164  1335.6620            7148.2  AAAFEDQENETVVVK     1\n",
-       "165  1398.6517            2797.6  AAAFEDQENETVVVK     1\n",
+       "        mz_values  intensity_values             Name  iter\n",
+       "0             136             924.3  AAAFEDQENETVVVK     1\n",
+       "1             136            2851.7  AAAFEDQENETVVVK     1\n",
+       "2             141            1404.0  AAAFEDQENETVVVK     1\n",
+       "3             143           26365.8  AAAFEDQENETVVVK     1\n",
+       "4             145            1128.4  AAAFEDQENETVVVK     1\n",
+       "...           ...               ...              ...   ...\n",
+       "527962       1086            4482.4    YYWGGLYSWDMSK  2133\n",
+       "527963       1144           13329.1    YYWGGLYSWDMSK  2133\n",
+       "527964       1144            5840.6    YYWGGLYSWDMSK  2133\n",
+       "527965       1330            5966.4    YYWGGLYSWDMSK  2133\n",
+       "527966       1331            1867.1    YYWGGLYSWDMSK  2133\n",
        "\n",
-       "[166 rows x 4 columns]"
+       "[527967 rows x 4 columns]"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gr.get_group(1).sort_values(\"intensity_values\", ascending=False).drop_duplicates(\"mz_values\").sort_index()"
+    "df_data = pd.DataFrame.from_dict(data)\n",
+    "# df1 = pd.DataFrame(index = round(df_data[\"mz_values\"]).unique())\n",
+    "df_cleaned = pd.DataFrame(columns=[\"mz_values\", \"intensity_values\", \"Name\", \"iter\"])\n",
+    "df_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gr = df_data.groupby(\"iter\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(df_data[\"iter\"].max()):\n",
+    "    df_cleaned.append(gr.get_group(1).sort_values(\"intensity_values\", ascending=False).drop_duplicates(\"mz_values\").sort_index())"
    ]
   },
   {
@@ -229,13 +219,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "for mz in df1.index:\n",
-    "    for i in gri.index:\n",
-    "        if gri.loc[i, \"mz_values\"] == mz:\n",
-    "            df1.loc[mz, gri[\"Name\"]] = gri.loc[i, \"mz_values\"]\n",
-    "        else: \n",
-    "            df1.loc[mz, gri[\"Name\"]] = 0"
+    "# for mz in df1.index:\n",
+    "#     for i in gri.index:\n",
+    "#         if gri.loc[i, \"mz_values\"] == mz:\n",
+    "#             df1.loc[mz, gri[\"Name\"]] = gri.loc[i, \"mz_values\"]\n",
+    "#         else: \n",
+    "#             df1.loc[mz, gri[\"Name\"]] = 0"
    ]
   },
   {
